--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,15 +14,14 @@ backtraces = ["cosmwasm-std/backtraces"]
 library = []
 
 [dependencies]
-cosmwasm-schema = "1.1.3"
-cosmwasm-std = "1.1.3"
-cosmwasm-storage = "1.1.3"
-cw-storage-plus = "1.0.1"
-cw2 = "1.0.1"
-cw20 = "0.16"
-schemars = "0.8.10"
-serde = { version = "1.0.145", default-features = false, features = ["derive"] }
-thiserror = { version = "1.0.31" }
+cosmwasm-schema = "1.1"
+cosmwasm-std = "1.1"
+cosmwasm-storage = "1.0"
+cw-storage-plus = "1.0"
+cw2 = "1.0"
+cw20 = "1.0"
+serde = { version = "1", default-features = false, features = ["derive"] }
+thiserror = "1"
 
 [dev-dependencies]
-cw-multi-test = "0.16.2"
+cw-multi-test = "0.16"
